--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.2",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
