--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "antd": "^5.17.2",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "geolib": "^3.3.4",
     "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
