--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
-    "antd": "^5.17.2",
+    "@ant-design/icons": "^5.3.7",
+    "antd": "^5.18.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "geolib": "^3.3.4",
