--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "html-react-parser": "^5.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.2",
     "zustand": "^4.5.2"
